fix: overflow-y

--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: hidden;
+}
+
 .google {
     text-transform: capitalize;
     color: var(--color1);
