--- a/frontend/src/css/PassRecovery.css
+++ b/frontend/src/css/PassRecovery.css
@@ -1,3 +1,3 @@
-#return {
-    margin-bottom: 0;
+body {
+    overflow-y: hidden;
 }
