--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: hidden;
+}
+
 .check-field {
     display: flex;
     justify-content: center;
